--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,13 @@
     "require": {
         "php": ">=5.4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "autoload": {
         "psr-0": {
-            "Q\\": "library/"
+            "Q\\": "library/",
+            "QTest\\": "tests/"
         }
     }
 }
