--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "devster/ubench": "1.1.*"
     },
     "autoload": {
         "psr-0": {
